fix(material/select): fix m3 arrow alignment

--- a/src/material-experimental/theming/_m3-density.scss
+++ b/src/material-experimental/theming/_m3-density.scss
@@ -119,7 +119,13 @@ $_density-tokens: (
     touch-target-display: (block, block, none, none),
   ),
   (mat, ripple): (),
-  (mat, select): (),
+  (mat, select): (
+    arrow-transform: (
+      translateY(-8px),
+      translateY(-8px),
+      none,
+    ),
+  ),
   (mat, sidenav): (),
   (mat, slide-toggle): (),
   (mat, slider): (),
